# digitalwave

./: .cproject  CMakeLists.txt  README.md  main.cpp  task1.cpp  task2.cpp
